--- a/analysis/simulation_no_enrichment.Rmd
+++ b/analysis/simulation_no_enrichment.Rmd
@@ -415,7 +415,7 @@ plot_prior_inclusion <- function(results_dir,runtag,simutags,thins,group_prior_v
   }
 }
 
-plot_prior_variance <- function(results_dir,runtag,thins,group_prior_var_structures,null_methods,true_value_gene,true_value_SNP){
+plot_prior_variance <- function(results_dir,runtag,thins,group_prior_var_structures,null_methods,file_name,true_value_gene,true_value_SNP){
   par(mfrow = c(1, 2))
   for(group_prior_var_structure in group_prior_var_structures){
     for(thin in thins){
