--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -34,6 +34,7 @@ editor_options:
   * [Simulation Param PIPs](simulation_param_PIPs.html)
   * [Simulation no enrichment](simulation_no_enrichment.html)
   * [Simulation one tissue no enrichment](simulation_one_tissue_no_enrichment.html)
+  * [Simulation two tissues no enrichment](simulation_two_tissues_no_enrichment.html)
   * [Simulation no enrichment four tissues combined](simulation_no_enrichment_four_tissues_combined.html)
   * [Simulation pip calibration](simulation_pip_calibration.html)
   
