--- a/analysis/simulation_one_tissue_no_enrichment.Rmd
+++ b/analysis/simulation_one_tissue_no_enrichment.Rmd
@@ -113,6 +113,13 @@ file_name <- ".minp0.mingene0.parameters.RDS"
 plot_enrichment(results_dir,runtag,thins,group_prior_var_structures,null_methods,file_name,true_value_gene)
 ```
 
+### All regions
+```{r,echo=FALSE,fig.width= 8, fig.height= 4}
+true_value_gene <- 0
+file_name <- ".Ftest.minp0.mingene0.parameters.RDS"
+plot_enrichment(results_dir,runtag,thins,group_prior_var_structures,null_methods,file_name,true_value_gene)
+```
+
 ### Prior Inclusion Probability
 ```{r,echo=FALSE,fig.width= 8, fig.height= 4}
 true_value_gene <- 0.0025
@@ -163,6 +170,12 @@ null_methods <- c("ctwas","susie")
 ```{r,echo=FALSE,fig.width= 8, fig.height= 4}
 true_value_gene <- 0
 file_name <- ".minp0.mingene0.parameters.RDS"
+plot_enrichment(results_dir,runtag,thins,group_prior_var_structures,null_methods,file_name,true_value_gene)
+```
+
+```{r,echo=FALSE,fig.width= 8, fig.height= 4}
+true_value_gene <- 0
+file_name <- ".Ftest.minp0.mingene0.parameters.RDS"
 plot_enrichment(results_dir,runtag,thins,group_prior_var_structures,null_methods,file_name,true_value_gene)
 ```
 
