--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -14,7 +14,10 @@ editor_options:
   
   [6 modality weights from Munro et al.](https://sq-96.github.io/multigroup_ctwas_analysis/data_6modality_Munro.html)
   
-  [Training stability weights using munro's RNA data](https://sq-96.github.io/multigroup_ctwas_analysis/data_weight_training_avg.html)
+  [Training stability weights using munro's RNA data](https://sq-96.github.io/multigroup_ctwas_analysis/data_weight_training_munro_filtered.html)
+  
+  [Training stability weights using munro's RNA data -- FUSION pipeline](https://sq-96.github.io/multigroup_ctwas_analysis/data_weight_training_fusionscale.html)
+
 
 ## Deciding weights  
   
